tests/error/poly_errors/arg_mismatch2.err
Error: Type mismatch (at $FILE:17:8)
   | 
15 | @guppy(module)
16 | def main() -> None:
17 |     foo(False)
   |         ^^^^^ Expected argument of type `(?T, ?T)`, got `bool`

Guppy compilation failed due to 1 previous error
